# patiencediff-rs

./: .gitignore  Cargo.toml  README.md  README.rst
src/: lib.rs  main.rs
