[package]
name = "patiencediff"
version = "0.1.0"
edition = "2018"
description = "Implementation of the patiencediff algorithm"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
homepage = "https://github.com/breezy-team/patiencediff-rs"
license = "GPL-2.0+"
repository = "https://github.com/breezy-team/patiencediff-rs"

[lib]
