[package]
name = "patiencediff"
version = "0.1.2"
edition = "2018"
description = "Implementation of the patiencediff algorithm"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
homepage = "https://github.com/breezy-team/patiencediff-rs"
license = "GPL-2.0+"
repository = "https://github.com/breezy-team/patiencediff-rs"

[lib]

[dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
patchkit = "0.1.8"

[features]
cli = ["dep:clap"]
default = ["cli"]

[[bin]]
name = "patiencediff"
path = "src/main.rs"
required-features = ["cli"]
