[package]
name = "patiencediff"
version = "0.2.1"
edition = "2018"
description = "Implementation of the patiencediff algorithm"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
homepage = "https://github.com/breezy-team/patiencediff-rs"
license = "GPL-2.0+"
repository = "https://github.com/breezy-team/patiencediff-rs"

[lib]

[dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
patchkit = { version = "0.1.9", optional = true }

[features]
cli = ["dep:clap"]
default = ["cli", "patchkit"]
patchkit = ["dep:patchkit"]

[[bin]]
name = "patiencediff"
path = "src/main.rs"
required-features = ["cli", "patchkit"]
